--- a/final/css/tablet.css
+++ b/final/css/tablet.css
@@ -1,8 +1,9 @@
 /*
-  ------- Style legend -------
-  main.css:        Global styling rules
-  desktop.css:     Desktop-sized styling rules
-  tablet.css:      Tablet-sized styling rules
-  mobile.css:      Mobile-sized styling rules
-  fonts/bree.css:  Bree font face imports
+  ---------------- Style legend ----------------
+  main.css:                 Global styling rules
+  desktop.css:              Desktop-sized styling rules
+  tablet.css:               Tablet-sized styling rules
+  mobile.css:               Mobile-sized styling rules
+  columnize/columnize.css:  Defines column/flex layout classes
+  fonts/bree.css:           Bree font face imports
 */
