--- a/final/css/main.css
+++ b/final/css/main.css
@@ -15,13 +15,19 @@
 @import url('tablet.css');
 @import url('mobile.css');
 
+/* clear all the things */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+
 /* Global styling rules */
 
 body {
   font-family: 'Arial', 'Helvetica', sans-serif;
   font-size: 13px;
   background-color: #fafafa;
-  height: 96%;
   padding-top: 2%;
   padding-bottom: 2%;
 }
@@ -30,6 +36,23 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Bree EB', sans-serif;
   text-transform: uppercase;
   line-height: 75%;
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
+img {
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: auto;
+}
+
+#ad1 {
+  background-image: url('../img/ad1.jpg');
+}
+
+#ad2 {
+  background-image: url('../img/ad2.jpg');
 }
 
 .white-text {
