--- a/final/css/desktop.css
+++ b/final/css/desktop.css
@@ -9,10 +9,18 @@
 */
 
 @media screen and (min-width: 992px) {
-
-  #ad1, #ad2 {
-    width: 100%;
+  .ad {
+    width: 90%;
   }
+
+  h1 { font-size: 48px; }
+  h2 { font-size: 36px; }
+  h3 { font-size: 24px; }
+
+
+
+
+
 
 }
 
