--- a/final/css/main.css
+++ b/final/css/main.css
@@ -21,7 +21,6 @@
   padding: 0;
 }
 
-
 /* Global styling rules */
 
 body {
@@ -32,31 +31,54 @@ body {
   padding-bottom: 2%;
 }
 
+main {
+  border: 1.25rem solid #93272C;
+  background-color: #E1B87F;
+  padding: 0.5rem;
+  color: #674736;
+}
+
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Bree EB', sans-serif;
-  text-transform: uppercase;
-  line-height: 75%;
   margin-top: 15px;
   margin-bottom: 5px;
+  font-family: 'Bree Rg', sans-serif;
+}
+
+h2, h3, h4, h5, h6 {
+  color: #93272C;
+}
+
+h1, h2 {
+  line-height: 75%;
+  font-family: 'Bree EB', sans-serif;
+  text-transform: uppercase;
+}
+
+h1 {color: #5d3926;}
+
+ul {
+  margin: 1.2em 0 1.2em 1.1em;
+
 }
 
 img {
   display: inline-block;
   background-repeat: no-repeat;
   background-size: contain;
-  height: auto;
+  margin: 10px auto;
+  display: block;
 }
 
-#ad1 {
-  background-image: url('../img/ad1.jpg');
-}
-
-#ad2 {
-  background-image: url('../img/ad2.jpg');
+#logo {
+  margin-left: 0;
 }
 
 .white-text {
   color: #ffffff;
+}
+
+.white-text + a:hover {
+    color: #93272C;
 }
 
 .container {
@@ -67,10 +89,4 @@ img {
 .col {
   padding-left: 5px;
   padding-right: 5px;
-}
-
-main {
-  border: 1.25rem solid #93272C;
-  background-color: #E1B87F;
-  padding: 0.5rem;
 }
