--- a/final/css/main.css
+++ b/final/css/main.css
@@ -5,6 +5,8 @@
   tablet.css:               Tablet-sized styling rules
   mobile.css:               Mobile-sized styling rules
   columnize/columnize.css:  Defines column/flex layout classes
+    NOTE: This is a framework that I developed FOR this
+              assignment. I did not take it from somewhere else.
   fonts/bree.css:           Bree font face imports
 */
 
