--- a/final/css/main.css
+++ b/final/css/main.css
@@ -25,12 +25,14 @@
 
 /* Global styling rules */
 
+/* body */
+
 body {
   font-family: 'Arial', 'Helvetica', sans-serif;
   font-size: 13px;
   background-color: #fafafa;
-  padding-top: 2%;
-  padding-bottom: 2%;
+  /*padding-top: 2%;
+  padding-bottom: 2%;*/
 }
 
 main {
@@ -60,19 +62,6 @@ h1 {color: #5d3926;}
 
 ul {
   margin: 1.2em 0 1.2em 1.1em;
-
-}
-
-img {
-  display: inline-block;
-  background-repeat: no-repeat;
-  background-size: contain;
-  margin: 10px auto;
-  display: block;
-}
-
-#logo {
-  margin-left: 0;
 }
 
 .white-text {
@@ -82,6 +71,123 @@ img {
 .white-text + a:hover {
     color: #93272C;
 }
+
+
+/*images*/
+
+img {
+  display: inline-block;
+  margin: 10px auto;
+  display: block;
+}
+
+/*header*/
+
+header > .background {
+  background-image: url('../img/header/rewards.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.background > .logo {
+  /*margin-left: 70px;
+  margin-top: 40px;*/
+  position: relative;
+  overflow: hidden;
+  margin: 0 auto;
+
+
+  z-index: 999;
+}
+
+header > nav > ul {
+  position: relative;
+  margin: 0 auto;
+  list-style: none;
+}
+
+nav > ul > li > a {
+  font-family: 'Bree Rg', sans-serif;
+  color: #5d3926;
+  display: inline-block;
+  width: 200px;
+  height: 70px;
+  /*text-indent: -9999px;*/
+  overflow: hidden;
+  margin: 3px;
+  padding: 0;
+}
+
+nav > ul > li {
+  float: left;
+  margin-right: 5px;
+}
+
+nav > ul > li:nth-child(1) {
+  background-color: #93272C;
+}
+
+nav > ul > li:nth-child(2) {
+  background-color: #4E769C;
+}
+
+nav > ul > li:nth-child(3) {
+  background-color: #A09958;
+}
+
+nav > ul > li:nth-child(4) {
+  background-color: #674736;
+}
+
+nav > ul > li:nth-child(5) {
+  background-color: #CF4520;
+}
+
+nav > ul > li:nth-child(6) {
+  background-color: #E1B87F;
+}
+
+nav > ul > li:hover {
+
+}
+
+header > div#mobile-nav > ul {
+  list-style: none;
+}
+
+header > div#mobile-nav > ul > li{
+  list-style: none;
+}
+
+
+/*footer*/
+
+footer > ul {
+  margin: 0;
+}
+
+footer > ul > li {
+  list-style: none;
+}
+
+footer > ul > li > ul {
+  list-style: none;
+}
+
+footer > ul > li > ul > li > a {
+  color: #666;
+}
+
+footer > ul > li > ul > li:first-child > a {
+  color: #93272C;
+  text-decoration: underline;
+  font-weight: 700;
+}
+
+
+/*layout*/
 
 .container {
   margin-left: auto;
