--- a/final/css/main.css
+++ b/final/css/main.css
@@ -30,13 +30,11 @@
 body {
   font-family: 'Arial', 'Helvetica', sans-serif;
   font-size: 13px;
-  background-color: #fafafa;
   /*padding-top: 2%;
   padding-bottom: 2%;*/
 }
 
 main {
-  border: 1.25rem solid #93272C;
   background-color: #E1B87F;
   padding: 0.5rem;
   color: #674736;
@@ -72,6 +70,15 @@ ul {
     color: #93272C;
 }
 
+hr {
+  color: #E1B87F;
+  background-color: #E1B87F;
+  border: 1px dotted #000;
+  border-style: none none dotted;
+  margin: 20px 0;
+  clear: both;
+}
+
 
 /*images*/
 
@@ -86,9 +93,9 @@ img {
 header > .background {
   background-image: url('../img/header/rewards.jpg');
   background-repeat: no-repeat;
-  background-size: cover;
-  height: 100%;
+  background-size: contain;
   width: 100%;
+  height: 69.5%;
 }
 
 .background > .logo {
@@ -97,15 +104,13 @@ header > .background {
   position: relative;
   overflow: hidden;
   margin: 0 auto;
-
-
   z-index: 999;
 }
 
 header > nav > ul {
-  position: relative;
   margin: 0 auto;
   list-style: none;
+  bottom: 0;
 }
 
 nav > ul > li > a {
@@ -114,7 +119,6 @@ nav > ul > li > a {
   display: inline-block;
   width: 200px;
   height: 70px;
-  /*text-indent: -9999px;*/
   overflow: hidden;
   margin: 3px;
   padding: 0;
@@ -123,34 +127,31 @@ nav > ul > li > a {
 nav > ul > li {
   float: left;
   margin-right: 5px;
+  background-color: rgba(0,0,0,0.25);
 }
 
-nav > ul > li:nth-child(1) {
+nav > ul > li:nth-child(1):hover {
   background-color: #93272C;
 }
 
-nav > ul > li:nth-child(2) {
+nav > ul > li:nth-child(2):hover {
   background-color: #4E769C;
 }
 
-nav > ul > li:nth-child(3) {
+nav > ul > li:nth-child(3):hover {
   background-color: #A09958;
 }
 
-nav > ul > li:nth-child(4) {
+nav > ul > li:nth-child(4):hover {
   background-color: #674736;
 }
 
-nav > ul > li:nth-child(5) {
+nav > ul > li:nth-child(5):hover {
   background-color: #CF4520;
 }
 
-nav > ul > li:nth-child(6) {
+nav > ul > li:nth-child(6):hover {
   background-color: #E1B87F;
-}
-
-nav > ul > li:hover {
-
 }
 
 header > div#mobile-nav > ul {
@@ -177,11 +178,11 @@ footer > ul > li > ul {
 }
 
 footer > ul > li > ul > li > a {
-  color: #666;
+  color: #aaa;
 }
 
 footer > ul > li > ul > li:first-child > a {
-  color: #93272C;
+  color: #ffffff;
   text-decoration: underline;
   font-weight: 700;
 }
