--- a/final/css/mobile.css
+++ b/final/css/mobile.css
@@ -18,10 +18,6 @@
     width: 75%;
   }
 
-  header > div#mobile-nav {
-    display: flex;
-  }
-
   header > .background > img.logo {
     /*width: 90%;*/
     margin: 0 auto;
@@ -39,6 +35,14 @@
     font-size: 1rem;
     text-align: center;
     margin: 0 auto;
+  }
+
+  footer  {
+    margin-top: 20px;
+  }
+
+  footer > ul > li {
+    margin-bottom: 10px;
   }
 
   footer > ul > li > ul > li:first-child {
